CAR-6163: First changes to update code to 25.